--- a/stephportfolio.html
+++ b/stephportfolio.html
@@ -10,10 +10,11 @@
 
 <nav id="navbar" class="nav">
     <ul class="nav-list">
-        <li><a href="#home">Home</a></li>
-      <li><a href="#welcome-section">About</a></li>
-      <li><a href="#projects">Work</a></li>
-      <li><a href="#contact">Contact</a></li>
+        <li><a href="stephportfolio.html">Home</a></li>
+      <li><a href="aboutme.html">About</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
     </ul>
   </nav>
   
