About me page finished

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Stephanie Pruna</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="stephportfolio.css">
 </head>
 
@@ -14,61 +14,39 @@
       <li><a href="aboutme.html">About</a></li>
       <li><a href="work.html">Work</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="#resume">Resume</li>
+      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
     </ul>
   </nav>
 
-<nav id="navbar" class="nav">
-    <ul class="nav-list">
-        <li><a href="stephportfolio.html">Home</a></li>
-      <li><a href="aboutme.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="#resume">Resume</li>
-    </ul>
-  </nav>
-  		<!-- ABOUT -->
-          <section id="about">
-			<!-- CONTAINER -->
-			<div class="container">
-				<h2>a little about me...</h2>
-				<div class="row info">
-					<div class="col-sm-8">
-						<p>
-							I'm currently studying Software Engineering at Salford University having just completed my 2nd year. I obsess over the minor details in CSS/HTML and am passionate in getting computers to more effectively work on your side by freeing you of the burdens of carrying out repetitive tasks through automative processes.
-						<span class="signature">.lewis briffa</span>
-					</div>
-
-					<div class="col-md-4">
-						<img src="https://res.cloudinary.com/dj7k0lade/image/upload/v1526688702/codepen/portfolio/profile.jpg" alt="Lewis Alberto Briffa" class="img-responsive img-circle">
-					</div>
-				</div>
-				
-				<div id="skill-set">
+  		<!-- ABOUT ME -->
+          <section id="about" class="about">
+                <h2>A little about me...</h2>
+                <br>
+                <div id="info" class="info">     
+                        <p>
+                            I am a passionate an advocate for Diversity & Inclusion in the workplace and currently work for Code Like a Girl. 
+                        </p>
+                        <br>
+                        <p>
+                            I have previously worked as the Tech Girl in Residence at NAB where I was responsible for the Women in Technology Program. I am also passionate about helping girls and women consider careers in Technology and work part time teaching girls how to code.
+                        </p>
+                        <br>
+                        <p>
+                            Currently studying at Coder Academy I am looking forward to my next journey as a full stack developer.
+                        </p>
+                    </div>
+					</section>
+				<section id="skills-list">
+				<div id="skill-set" class="skill-set">
 					<h3>Skills</h3>
-					<ul class="vertical-list">
-						<li>
-							<ul class="vertical-list skills" id="web-development-skills">
+					<ul class="skill-list">
 								<li>HTML</li>
 								<li>CSS</li>
-								<li>JavaScript</li>
+                                <li>Ruby</li>
+                                <li>Python</li>
+                                <li>Azure Cloud Certified</li>
+                                <li>Google Cloud Certified</li>
 							</ul>
-						</li>
-						<li>
-							<ul class="vertical-list skills" id="automation-skills">
-								<li>AutoHotKey</li>
-							</ul>
-						</li>
-
-						<li>
-							<ul class="vertical-list skills" id="misc-skills">
-								<li>Regular Expressions</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
 			</div>
-			<!-- END OF CONTAINER -->
 		</section>
-		<!-- END OF ABOUT -->
   </body>
