--- a/stephportfolio.html
+++ b/stephportfolio.html
@@ -23,8 +23,9 @@
   <!-- START WELCOME SECTION -->
   
   <section id="welcome-section" class="welcome-section">
+    <img src="profile1.png" id="steph-image" class="steph-image" alt="Stephanie Pruna">  
     <h1>Stephanie Pruna</h1>
-    <p>a developer</p>
+    <p>A full-stack developer</p>
   </section>
   
   <!-- END WELCOME SECTION -->
