--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
       <li><a href="aboutme.html">About</a></li>
       <li><a href="work.html">Work</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="#resume">Resume</li>
+      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
     </ul>
   </nav>
 
