Added education section to about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
 
   		<!-- ABOUT ME -->
           <section id="about" class="about">
-                <h2>A little about me...</h2>
+                <h2>About me...</h2>
                 <br>
                 <div id="info" class="info">     
                         <p>
@@ -35,7 +35,18 @@
                             Currently studying at Coder Academy I am looking forward to my next journey as a full stack developer.
                         </p>
                     </div>
-					</section>
+                </section>
+                    <section id="education-info">
+                            <div id="education" class="education">
+                                <h3>Education</h3>
+                                <ul class="education-list">
+                                            <li>Diploma of IT - Coder Academy</li>
+                                            <li>Introduction to Programming - RMIT</li>
+                                            <li>VCE - Clonard College</li>
+                                        </ul>
+                        </div>
+                    </section>
+
 				<section id="skills-list">
 				<div id="skill-set" class="skill-set">
 					<h3>Skills</h3>
