Updates to About me page, contact page and blog page.

--- a/stephportfolio.html
+++ b/stephportfolio.html
@@ -2,31 +2,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Stephanie Pruna</title>
+    <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stephportfolio.css">
 </head>
 
 <body>
-<!-- START NAV -->
 
-<nav id="navbar" class="nav">
-    <ul class="nav-list">
-        <li><a href="stephportfolio.html">Home</a></li>
-      <li><a href="aboutme.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
-    </ul>
-  </nav>
+  <!-- NAVIGATION -->
+<section id ="home">
+  <div class="overlay">
+    <nav id="navbar" class="nav">
+        <ul class="nav-list">
+          <li><a href="stephportfolio.html">Home</a></li>
+          <li><a href="aboutme.html">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
   
-  <!-- END NAV -->
-  
-  <!-- START WELCOME SECTION -->
-  
-  <section id="welcome-section" class="welcome-section">
-    <img src="profile1.png" id="steph-image" class="steph-image" alt="Stephanie Pruna">  
+  <!-- WELCOME SECTION -->
+  <section id="welcome-section" class="welcome-section"> 
     <h1>Stephanie Pruna</h1>
     <p>A full-stack developer</p>
   </section>
-  
-  <!-- END WELCOME SECTION -->
 </body>
