--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="stylesheet" href="stephportfolio.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,31 +13,30 @@
     <ul class="nav-list">
         <li><a href="stephportfolio.html">Home</a></li>
       <li><a href="aboutme.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
+      <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
     </ul>
   </nav>
 
-  		<!-- ABOUT ME -->
+          <!-- ABOUT ME -->
           <section id="about" class="about">
                 <h2>About me...</h2>
                 <br>
-                <div id="info" class="info">     
-                        <p>
-                            I am a passionate an advocate for Diversity & Inclusion in the workplace and currently work for Code Like a Girl. 
-                        </p>
+                <div class="profile-pic">
+                    <img src="profile1.png" class="steph-pic" alt="Stephanie Pruna Profile Pic">
+                </div>
+                <div class="info">     
+                            I am a passionate advocate for Diversity & Inclusion in the workplace and currently work for Code Like a Girl. 
                         <br>
-                        <p>
+                    
                             I have previously worked as the Tech Girl in Residence at NAB where I was responsible for the Women in Technology Program. I am also passionate about helping girls and women consider careers in Technology and work part time teaching girls how to code.
-                        </p>
                         <br>
-                        <p>
                             Currently studying at Coder Academy I am looking forward to my next journey as a full stack developer.
-                        </p>
                     </div>
-                </section>
-                    <section id="education-info">
+                    <br>
+                    <div id="resume" class="resume">
+                            <a href="Resume - Stephanie Pruna.pdf">View my Resume</a>
+                        </div>
                             <div id="education" class="education">
                                 <h3>Education</h3>
                                 <ul class="education-list">
@@ -45,9 +45,7 @@
                                             <li>VCE - Clonard College</li>
                                         </ul>
                         </div>
-                    </section>
-
-				<section id="skills-list">
+                 
 				<div id="skill-set" class="skill-set">
 					<h3>Skills</h3>
 					<ul class="skill-list">
@@ -55,9 +53,9 @@
 								<li>CSS</li>
                                 <li>Ruby</li>
                                 <li>Python</li>
-                                <li>Azure Cloud Certified</li>
-                                <li>Google Cloud Certified</li>
+                                <li>Azure Cloud</li>
+                                <li>Google Cloud</li>
 							</ul>
-			</div>
+            </div>
 		</section>
   </body>
