--- a/contact.html
+++ b/contact.html
@@ -1,67 +1,53 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Stephanie Pruna</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="stephportfolio.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<!-- START NAV -->
+<!-- NAVIGATION -->
 
 <nav id="navbar" class="nav">
     <ul class="nav-list">
         <li><a href="stephportfolio.html">Home</a></li>
       <li><a href="aboutme.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
+      <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="Resume - Stephanie Pruna.pdf">Resume</li>
     </ul>
   </nav>
 
-<nav id="navbar" class="nav">
-    <ul class="nav-list">
-        <li><a href="stephportfolio.html">Home</a></li>
-      <li><a href="aboutme.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="#resume">Resume</li>
-    </ul>
-  </nav>
   <!-- START CONTACT SECTION -->
 
 <section id="contact" class="contact-section">
-    <div class="contact-section-header">
-      <h2>Let's work together...</h2>
-      <p>and build dreams!</p>
-    </div>
-    <div class="contact-links">
-      <a
-        href="https://www.facebook.com/stephaniekvuckovic"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-facebook-square"></i> Facebook</a
-      >
-      <a
-        id="profile-link"
-        href="https://github.com/Victoriablu"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-github"></i> GitHub</a
-      >
-      <a
-        href="https://twitter.com/_Victoriablu_"
-        target="_blank"
-        class="btn contact-details"
-        ><i class="fab fa-twitter"></i> Twitter</a
-      >
-      <a href="mailto:stephanie.pruna@gmail.com" class="btn contact-details"
-        ><i class="fas fa-at"></i> Email Me</a
-      >
-      <a href="tel:0401 207 726" class="btn contact-details"
-        ><i class="fas fa-mobile-alt"></i> Call me</a
-      >
-    </div>
-  </section>
-  
-  <!-- END CONTACT SECTION -->
-  </body>
+        <div class="contact-section-header">
+          <h2>Let's work together...</h2>
+        </div>
+        <div class="contact-links">
+          <a
+            href="https://www.facebook.com/stephaniekvuckovic"
+            target="_blank"
+            class="facebook-btn"
+            ><img src="Facebook.png" class="facebook" alt="faceboook logo">Facebook</a
+          >
+          <a
+            href="https://github.com/Victoriablu"
+            target="_blank"
+            class="github-btn"
+            ><img src="GitHub.png" class="github" alt="github logo">Github</a
+          >
+          <a
+            href="https://twitter.com/_Victoriablu_"
+            target="_blank"
+            class="twitter-btn"
+            ><img src="Twitter.png" class="twitter" alt="twitter logo">Twitter</a
+          >
+          <a href="mailto:stephanie.pruna@gmail.com" class="email-btn"
+            ><img src="Email.png" class="email" alt="email logo">Email</a
+          >
+        </div>
+      </section>
+      
+      <!-- END CONTACT SECTION -->
+      
