Updates to CSS file - added flex box for Blog Posts and Fonts

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,12 @@
             class="twitter-btn"
             ><img src="Twitter.png" class="twitter" alt="twitter logo">Twitter</a
           >
+          <a
+          href="https://www.linkedin.com/in/stephanie-pruna-98613a12a/"
+          target="_blank"
+          class="linkedin-btn"
+          ><img src="LinkedIn.png" class="linked-in" alt="LinkedIn Logo">Linked In</a
+        >
           <a href="mailto:stephanie.pruna@gmail.com" class="email-btn"
             ><img src="Email.png" class="email" alt="email logo">Email</a
           >
