Added Blog Posts Page, Updated Site Map, Added CSS for Blog Posts Page, Added SI

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="stephportfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
@@ -22,10 +23,10 @@
           <section id="about" class="about">
                 <h2>About me...</h2>
                 <br>
-                <div class="profile-pic">
+                <div id="profile-pic" class="profile-pic">
                     <img src="profile1.png" class="steph-pic" alt="Stephanie Pruna Profile Pic">
                 </div>
-                <div class="info">     
+                <div id="info" class="info">     
                             I am a passionate advocate for Diversity & Inclusion in the workplace and currently work for Code Like a Girl. 
                         <br>
                     
