--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="stephportfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
