--- a/stephportfolio.html
+++ b/stephportfolio.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Stephanie Pruna</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stephportfolio.css">
+    <link rel="stylesheet" integrity="sha256tGdB9ZGh8JruavDjlg/Z3JpVebXPVmM0pg7iHWScDRg sha384-PMzt3FmQfTtaRRZU0BWPZyg5UtijEGl7HLTg9uj4Qj0ZL0Q8sq3vCRZLYM0707x1 sha512-JBZYFeDiVmwSKEiRVOokoaJHvAVnJtTwHU4nPTgeUCHyqkVBLPYUUhN34i+LD/Rwj+7+NOCWNh5mg5af/GmbJg==" href="stephportfolio.css">
 </head>
 
 <body>
