Added SI hashes

--- a/stephportfolio.html
+++ b/stephportfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stephportfolio.css">
+    <link rel="stylesheet" integrity="sha384-eI1HRHw44JF+NK3kSMXFcvcF6VcSpiFtJm39qA8umCl2RPUKADr98au2KJi5WQbx sha256-alzx8ADxrGWc0poR5bpsRjXEKGIfFrGhF5PAAUQSVr8 sha512-NEQxykUDDHt9+FBPnW0giNkarU8I2z75Xz21Y9OrpBo+oKsk6YFZEiq2rXQxjJA1pKsVSkynQ6V4I7VVoTEJWQ==" href="stephportfolio.css">
 </head>
 
 <body>
