--- a/blogposts.html
+++ b/blogposts.html
@@ -13,7 +13,7 @@
 
 <nav id="navbar" class="nav">
     <ul class="nav-list">
-        <li><a href="stephportfolio.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
