Addedd SI after CSS changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stephportfolio.css">
+    <link rel="stylesheet" integrity="sha256-gDh8fwfkJfks72FPMPQHC94d2M+biU13bYVx7Ti/m/w= sha384-39AlJsVHodehhfsnuX366+0ik928kUHXsrfKdxNGpqoc5zKoX1Y4aBgP7c6ZpaVC sha512-EvOZwAiK5KOpXGGN/unxhXd+XotFOCd+oXM6cg5VYGiRuRPfMwXNXxWkUhFphCK6/rQcBSafFa2ALkct2GVbqg==" href="stephportfolio.css">
 </head>
 
 <body>
